inline attachment links: break long words to prevent horizontal scrolling

--- a/themes/light/tt-rss.less
+++ b/themes/light/tt-rss.less
@@ -1064,6 +1064,10 @@ body.ttrss_main {
 		max-width : 120px;
 	}
 
+	.attachments-inline a {
+		word-break: break-all;
+	}
+
 	#filterDlg_feeds select {
 		height : 150px;
 		width : 410px;
